# mcmanager

mcmanager/: Cargo.toml
mcmanager/src/: main.rs  tools.rs
